--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity
             android:name=".Login"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +39,10 @@
 
         </activity>
 
-        <activity android:name=".MapsActivity">
+        <activity
+            android:name=".MapsActivity"
+            android:screenOrientation="portrait"
+            >
 
         </activity>
     </application>
