--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
+
     implementation 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.firebaseui:firebase-ui:3.2.1'
     testImplementation 'junit:junit:4.12'
