--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
         </activity>
         <activity android:name=".ShopView"
             android:screenOrientation="portrait"/>
+        <activity android:name=".RandomEncounter"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Gridactivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
