--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,29 +25,29 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
 
     implementation 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.firebaseui:firebase-ui:3.2.1'
+    implementation 'com.firebaseui:firebase-ui:3.2.1'
     testImplementation 'junit:junit:4.12'
-    compile 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     // FirebaseUI for Firebase Auth
     implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
-    compile 'com.firebaseui:firebase-ui-auth:3.2.1'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:4.27'
     // Required only if Facebook login support is required
-    compile('com.facebook.android:facebook-android-sdk:4.27.0') { transitive = true }
+    implementation('com.facebook.android:facebook-android-sdk:4.27.0') { transitive = true }
     // FirebaseUI for Firebase Realtime Database
     implementation 'com.firebaseui:firebase-ui-database:3.2.1'
 
 // FirebaseUI for Cloud Firestore
     implementation 'com.firebaseui:firebase-ui-firestore:3.2.1'
 
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
 
 }
 
