--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     
     repositories {
-
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
 
         // Required for 'com.firebaseui:firebase-ui:1.1.1'
