nimenvaihto pakotetaan ensikirjautumisella Nimenvaihto näkyy heti Menussa Delete profile toimii 17.4.2018

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
             android:name=".Gridactivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".LogOutActivity"
+            android:name=".ProfileActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".MainMenuActivity" />
         <activity android:name=".BuyActivity" />
