--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <activity android:name=".MainMenuActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".SellActivity" />
-        <activity android:name=".TurnBasedActivity"></activity>
+        <activity android:name=".TurnBasedActivity" />
+        <activity android:name=".InventoryActivity"></activity>
     </application>
 
 </manifest>
