--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,14 +47,13 @@
         </activity>
         <activity
             android:name=".MapsActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Barview"
-            android:screenOrientation="portrait"
-            android:noHistory="true"
             android:launchMode="singleInstance"
-            />
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ShopView"
             android:screenOrientation="portrait" />
@@ -69,8 +68,9 @@
             android:screenOrientation="portrait" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".SellActivity" />
-        <activity android:name=".InventoryActivity"></activity>
+        <activity android:name=".InventoryActivity" />
         <activity android:name=".TurnBasedActivity" />
+        <activity android:name=".BenderBattleActivity"></activity>
     </application>
 
 </manifest>
